# final-project-programming-v

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  default.nix  final-project-programming-v.cabal  hie.yaml  index.js  package-lock.json  package.json  result  server.js  stack.yaml
src/: Collision.hs  Constants.hs  Game.hs  Logic.hs  Rendering.hs  Transition.hs  Utils.hs
static/: main.scss  style.css  style.scss
test/: NewTilesTest.hs  RandomGenerationTest.hs  Spec.hs  TransitionTest.hs
web/: Main.hs
