cabal-version:      2.2
name:               final-project-programming-v
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/MorveN11/final-project-programming-v#readme>

homepage:
  https://github.com/MorveN11/final-project-programming-v#readme

bug-reports:
  https://github.com/MorveN11/final-project-programming-v/issues

author:             Miso Devs
maintainer:         morales.patty.jose@gmail.com
copyright:          2024 Morales Patty Jose Manuel
license:            MIT
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/MorveN11/final-project-programming-v

common configuration
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
    -haddock

  build-depends:
    , base        >=4.7 && <5
    , containers
    , miso
    , random

  default-language: Haskell2010

common executable-configuration
  ghc-options:   -threaded -rtsopts -with-rtsopts=-N
  build-depends: final-project-programming-v

library
  import:          configuration
  exposed-modules:
    Constants
    Game
    Logic
    Rendering
    Utils

  hs-source-dirs:  src

executable final-project-programming-v-exe
  import:         configuration, executable-configuration
  main-is:        Main.hs
  hs-source-dirs: web

  if !impl(ghcjs)
    buildable: False

  ghcjs-options:  -dedupe

test-suite final-project-programming-v-test
  import:         configuration, executable-configuration
  main-is:        Spec.hs
  hs-source-dirs: test
  type:           exitcode-stdio-1.0
  build-depends:  QuickCheck
